# TI-Viewer

./: CMakeLists.txt  PROTOCOL  README.md
data/: CMakeLists.txt  ti-viewer.desktop
debian/: changelog  control  copyright
src/: Application.vala  CMakeLists.txt  MainWindow.vala  config.vala
src/Backend/: CalcManager.vala  Server.vala  ServiceProvider.vala
vapi/: ticables2.vapi  ticalcs2.vapi  tifiles2.vapi
