install (FILES ti-viewer.desktop DESTINATION share/applications)

#install (FILES 128/ti-viewer.svg DESTINATION ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/128x128/apps)
#install (FILES 64/ti-viewer.svg DESTINATION ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/64x64/apps)
#install (FILES 48/ti-viewer.svg DESTINATION ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/48x48/apps)